[project]
name = "jan-tool-using"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "annotated-types==0.7.0",
    "anyio==4.11.0",
    "attrs==25.4.0",
    "certifi==2025.10.5",
    "click==8.3.0",
    "deepgram-sdk==5.2.0",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "httpx-sse==0.4.3",
    "idna==3.11",
    "jsonschema==4.25.1",
    "jsonschema-specifications==2025.9.1",
    "mcp==1.18.0",
    "playsound3==3.2.8",
    "pydantic==2.12.3",
    "pydantic-core==2.41.4",
    "pydantic-settings==2.11.0",
    "pygments==2.19.2",
    "python-dotenv==1.1.1",
    "python-multipart==0.0.20",
    "referencing==0.37.0",
    "rpds-py==0.27.1",
    "sniffio==1.3.1",
    "sse-starlette==3.0.2",
    "starlette==0.48.0",
    "tzdata",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "uvicorn==0.37.0",
    "websockets==15.0.1",
]
